Fixed intermediate preview card height & gap

--- a/src/app/shared/content-preview-strip.component.scss
+++ b/src/app/shared/content-preview-strip.component.scss
@@ -108,7 +108,7 @@ app-content-preview-strip {
   width: 100% !important;
   max-width: 100% !important;
   min-width: 0 !important;
-  height: calc(var(--nt-vh) * 60 * var(--nt-int-scale, 1)) !important;
+  height: calc(var(--nt-vh) * 68 * var(--nt-int-scale, 1)) !important;
   justify-self: stretch !important;
 }
 
